--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,9 @@
   "name": "eventapture",
   "private": true,
   "dependencies": {
-    "jquery": "~1.11.1"
+    "jquery": "~1.11.1",
+    "angular": "~1.3.15",
+    "bootstrap-sass": "~3.3.4",
+    "font-awesome": "~4.3.0"
   }
 }
