--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,8 @@
     "jquery": "~1.11.1",
     "angular": "~1.3.15",
     "bootstrap-sass": "~3.3.4",
-    "font-awesome": "~4.3.0"
+    "font-awesome": "~4.3.0",
+    "angular-ui-router": "~0.2.13",
+    "angular-nvd3": "~0.1.1"
   }
 }
