--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "bootstrap-sass": "~3.3.4",
     "font-awesome": "~4.3.0",
     "angular-ui-router": "~0.2.13",
-    "angular-nvd3": "~0.1.1"
+    "angular-nvd3": "~0.1.1",
+    "angular-bootstrap": "~0.12.1"
   }
 }
