--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "font-awesome": "~4.3.0",
     "angular-ui-router": "~0.2.13",
     "angular-nvd3": "~0.1.1",
-    "angular-bootstrap": "~0.12.1"
+    "angular-bootstrap": "~0.12.1",
+    "ng-tags-input": "~2.3.0"
   }
 }
